--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Тимур.ко</string>
+    <string name="empty">j</string>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="surname">Фамилия</string>
     <string name="lastname">Имя</string>
