Базовая версия 2. Разложил классы по слоям entities, service, retrofit. Добавил сохранение email и пароля в настройках приложения. Добавил страницу главного окна - StartActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Тимур.ко</string>
     <string name="empty">j</string>
+    <style name="unknownInfo">Неизвестно</style>
     <string name="title_activity_register">RegisterActivity</string>
     <string name="surname">Фамилия</string>
     <string name="lastname">Имя</string>
