--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,5 +20,11 @@
     <string name="cancel">Отмена</string>
     <string name="dialogCancel">Для закрытия окна нажмите ОТМЕНА</string>
     <string name="empty">""</string>
+    <string name="errorNetwork">Ошибка сети! Проверьте подключение!</string>
+    <string name="noConnection">Нет подключения к серверу. Нажми ПОПРОБЫВАТЬ СНОВА, чтобы перезагрузить страницу</string>
+    <string name="refreshApp">Попробывать снова</string>
+    <string name="exitApp">Выйти</string>
+
     <style name="unknownInfo">Неизвестно</style>
+
 </resources>
